2007-05-14  Daniel Nylander <po@danielnylander.se>

	* configure.ac: Added 'sv' to ALL_LINGUAS.

2007-05-14  Calvin Gaisford <calvinrg@gmail.com>

	* NEWS: Updated for 0.1.2.

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: Moved updateproviderusers to be public so the
	  PersonStore can call it after creating persons
	* Banter/PersonStore.cs: Updated creation of persons so the
	  updateProviderUsers is called
	* Banter/ProviderUserManager.cs: Added an event that is fired when new
	  users are added
	* Banter/PersonSync.cs: Added code to sync ProviderUsers into EDS

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/AccountManagement.cs: Hack to disconnect tapioca connections
	* Banter/Application.cs: Change to call Account Management to cleanup
	  connections

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/ChatWindow.cs: remove debug
	* Banter/Conversation.cs: ???

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: ADded all of the avatar events so avatars get
	  updated
	* Banter/PersonCard.cs: fixed up avatars

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/Application.cs: removed the call to create a ChatWindow after
	  creating a new conversation in InitiateChat
	* Banter/ConversationManager.cs: debug

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: removed some debug code

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: updated person to request the avatar data when the
	  presence is updateed

2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: ADded avatar events from ProviderUser
	* Banter/PersonCard.cs: Added event handlers from person for avatar
	  changes

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/ProviderUser.cs: added delegate and events for avatars

2007-05-11  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: fixed the presence problem.  no more creating new